--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,24 +8,27 @@ environment:
   sdk: ">=2.15.1 <3.0.0"
 
 dependencies:
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.4
   easy_localization: ^3.0.0
   file_picker: ^4.5.1
   flutter:
     sdk: flutter
   flutter_contact: ^0.9.1+8
+  flutter_platform_widgets: ^1.20.0
+  full_text_search: ^0.8.0+3
   image_picker: ^0.8.4+11
   path_provider: ^2.0.9
   permission_handler: ^9.2.0
   provider: ^6.0.2
   share_plus: ^4.0.1
+  sunny_dart: ^0.11.0+8
   url_launcher: ^6.0.20
 
 dev_dependencies:
   flutter_lints: ^1.0.0
 flutter_test:
-    sdk: flutter
-    
+  sdk: flutter
+
 flutter:
   uses-material-design: true
 
