--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,10 +20,10 @@ dependencies:
   path_provider: ^2.0.9
   permission_handler: ^9.2.0
   provider: ^6.0.2
+  qr_flutter: any
   share_plus: ^4.0.1
   sunny_dart: ^0.11.0+8
   url_launcher: ^6.0.20
-
 
 dev_dependencies:
   flutter_lints: ^1.0.0
