--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,9 +21,11 @@ dependencies:
   permission_handler: ^9.2.0
   provider: ^6.0.2
   qr_flutter: any
+  share_extend: ^2.0.0
   share_plus: ^4.0.1
   sunny_dart: ^0.11.0+8
   url_launcher: ^6.0.20
+  validators: ^3.0.0
 
 dev_dependencies:
   flutter_lints: ^1.0.0
